# cpp-mcts

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  conanfile.py  sonar-project.properties
.circleci/: config.yml
build-agent/: Dockerfile
include/mcts/: graphviz.hpp  mcts.h  mcts.hpp
samples/: CMakeLists.txt
samples/tictactoe/: Board.cpp  Board.h  Board.hpp  CMakeLists.txt  GUI.cpp  GUI.h  GUI.hpp  Game.cpp  TTTAction.h  TTTAction.hpp  TTTMCTSPlayer.cpp  TTTMCTSPlayer.h  TTTMCTSPlayer.hpp  TTTStrategy.cpp  TTTStrategy.h  TTTStrategy.hpp
src/: CMakeLists.txt  graphviz.h  mcts.h
test/: CMakeLists.txt  Mocks.hpp  Node.cpp  TestGame.cpp  TestGame.h  TestGame.hpp  main.cpp  mocks.h  node.cpp
